--- a/landing.html
+++ b/landing.html
@@ -7,6 +7,7 @@
         <script src="/public/js/phaser.js"></script>
         <script src="/public/js/player.js"></script>
         <script src="/public/js/enemy.js"></script>
+        <script src="/public/js/tile.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/public/js/game.js"></script>
 
