--- a/landing.html
+++ b/landing.html
@@ -11,7 +11,7 @@
         <script src="/socket.io/socket.io.js"></script>
         <script src="/public/js/game.js"></script>
 
-        <title>xdxdxdxdxdxdxxdxddxddxxddxd</title>
+        <title>jongers</title>
 
         <style>
             body, html {
