--- a/landing.html
+++ b/landing.html
@@ -9,6 +9,7 @@
         <script src="/public/js/enemy.js"></script>
         <script src="/public/js/tile.js"></script>
         <script src="/public/js/button.js"></script>
+        <script src="/public/js/simpleimage.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/public/js/game.js"></script>
 
