--- a/landing.html
+++ b/landing.html
@@ -10,6 +10,7 @@
         <script src="/public/js/tile.js"></script>
         <script src="/public/js/button.js"></script>
         <script src="/public/js/simpleimage.js"></script>
+        <script src="/public/js/menu.js"></script>
         <script src="/socket.io/socket.io.js"></script>
         <script src="/public/js/game.js"></script>
 
@@ -24,5 +25,6 @@
         </style>
     </head>
     <body>
+        <div id="base"></div>
     </body>
 </html>
